fix chrome overlapping bug in editor

--- a/assets/src/editor/scss/editor-styles.scss
+++ b/assets/src/editor/scss/editor-styles.scss
@@ -71,3 +71,8 @@
 .card {
   margin-top: 0;
 }
+
+// This fixes a bug in Chrome of overlapping meta-data.
+.block-editor-writing-flow {
+  height: auto;
+}
